--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,5 +5,8 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
+# Bluetooth low power timeout
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+
 # Up the bluetooth power of the device
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
